# Vela

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  SECURITY.md  global.json
.github/: dependabot.yml
core/: CMakeLists.txt  emulator.c  emulator.h
core/common/: arena.c  arena.h  assert.h  log.c  log.h  result.h
core/cpu/: cpu.c  cpu.h
core/cpu/backends/noop/: noop.c  noop.h
core/hle/: hle.c  hle.h
core/stubs/: wasm_entry.c
docs/: DESIGN.md  DUMP.md
platform/web/: index.html  package.json  pnpm-lock.yaml  site.webmanifest  tsconfig.json  vite.config.ts
platform/web/bindings/: core.ts  protocol.ts
platform/web/src/: capabilities.ts  log.ts  main.ts
platform/web/src/ui/: App.tsx  mount.tsx  shell.css
platform/web/workers/: audio.worker.ts  cpu.worker.ts  gpu.worker.ts
poc/: README.md
poc/01_dynarmic_bottlenecks/: CMakeLists.txt  bench.cpp  sample_output.txt
poc/02_wasm_pipeline/: index.html
poc/03_backend_interface/: ballistic_stub.c  cpu.h  dynarmic_backend.c
tests/: CMakeLists.txt  smoke_phase0.c
